CATL-1593: Align checkbox to the right and fix ARIA checked property

--- a/scss/components/_case-peoples.scss
+++ b/scss/components/_case-peoples.scss
@@ -189,10 +189,13 @@
 }
 
 .civicase__people-tab__inactive-filter {
+  margin-left: auto;
+  margin-right: $case-gutter-width;
+
   .civicase__checkbox {
     display: inline-block;
-    margin-right: 5px;
-    top: 4px;
+    margin-right: $basic-gutter;
+    top: $basic-gutter;
   }
 }
 
